Working on restaurants page to connect with backend and make it functional